<resources>

    <string name="item_card_transition_name" translatable="false">item_card_%1$s</string>
    <string name="item_card_detail_transition_name" translatable="false">item_card_detail</string>

    <string name="app_name">Rembrandt</string>
    <string name="main_menu_home">Home</string>
    <string name="main_menu_favorites">Favorites</string>
    <string name="main_menu_explore">Explore</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_explore_fragment">Hello explore fragment</string>
    <string name="hello_favorites_fragment">Hello favorites fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="saved_in_favorites">Saved in favorites</string>
    <string name="download_image">Download image</string>
    <string name="share">Share</string>
    <string name="zoom_in">Zoom in</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="recommended">Recommended:</string>
    <string name="reason_it_was_recommended_same_artist">From the same artist</string>
    <string name="reason_it_was_recommended_same_artwork_type">The same type of artwork</string>
    <string name="reason_it_was_recommended_same_category">Belongs to the same category</string>
    <string name="reason_it_was_recommended_same_gallery">From the same gallery</string>
    <string name="frag_artwork_detail_no_description_available">No description available.</string>
    <string name="frag_artwork_detail_extended_fab_translate">Translate</string>
    <string name="frag_artwork_detail_extended_fab_show_original">Original</string>
    <string name="frag_artwork_detail_err_translation_not_available">Translation not available</string>
    <string name="frag_artwork_detail_snackbar_action_text">OK, thanks</string>
    <string name="frag_artwork_detail_wait_until_translation_is_ready">Wait until your translation is ready.</string>
    <string name="frag_artwork_content_tab_description_text">Description</string>
    <string name="frag_artwork_content_tab_characteristics_text">Characteristics</string>
    <string name="frag_artwork_content_tab_analysis_text">Analysis</string>
    <string name="frag_artwork_content_tab_curiosities_text">Curiosities</string>
    <string name="frag_artwork_content_tab_critique_text">Critique</string>
    <string name="frag_artwork_content_tab_artist_text">Artist</string>
    <string name="frag_artwork_content_tab_gallery_text">Gallery</string>
    <string name="err_image_not_found">There was an error to try to fetch the image. Sorry :c</string>
    <string name="display_artwork_transition_name">display_artwork_transition_name</string>
    <string name="chip_zoom_in_transition_name">chip_zoom_in_transition_name</string>
    <string name="image_artwork_transition_name">image_artwork_transition_name</string>
</resources>
