<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.listocalixto.android.rembrandt.R" />

        <import type="com.listocalixto.android.rembrandt.presentation.ui.main.detail.artwork.ArtworkDetailUiEvent" />

        <variable
            name="artworkDetailViewModel"
            type="com.listocalixto.android.rembrandt.presentation.ui.main.detail.artwork.ArtworkDetailViewModel" />

        <variable
            name="onChipFavorite"
            type="ArtworkDetailUiEvent" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:transitionGroup="true">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:transitionName="@string/item_card_detail_transition_name"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardElevation="0dp"
            app:strokeWidth="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/_56sdp"
                tools:context=".presentation.ui.main.detail.artwork.ArtworkDetailFragment">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_320sdp"
                    android:layout_marginHorizontal="@dimen/grid_2"
                    android:scaleType="fitCenter"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:loadFromCache="@{artworkDetailViewModel.uiState.imageUrl}"
                    app:memoryCacheKey="@{artworkDetailViewModel.uiState.memoryCacheKey}"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScroll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_2"
                    android:scrollbarSize="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image">

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:paddingHorizontal="@dimen/grid_3"
                        app:singleLine="true">

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zoom_in"
                            app:chipIcon="@drawable/ic_zoom_in"
                            app:ensureMinTouchTargetSize="true" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chipFavorite"
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:onClick="@{_ -> artworkDetailViewModel.onEvent(onChipFavorite)}"
                            android:text="@{artworkDetailViewModel.uiState.favorite ? @string/saved_in_favorites : @string/save_to_favorites}"
                            app:chipIcon="@{artworkDetailViewModel.uiState.favorite ? @drawable/ic_favorite : @drawable/ic_favorite_border}"
                            app:ensureMinTouchTargetSize="true"
                            tools:chipIcon="@drawable/ic_favorite"
                            tools:text="Saved in favorites" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/download_image"
                            app:chipIcon="@drawable/ic_download"
                            app:ensureMinTouchTargetSize="true" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/add_to_collection"
                            app:chipIcon="@drawable/ic_collections"
                            app:ensureMinTouchTargetSize="true" />

                        <com.google.android.material.chip.Chip
                            style="@style/Widget.Material3.Chip.Assist.Elevated"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/share"
                            app:chipIcon="@drawable/ic_share"
                            app:ensureMinTouchTargetSize="true" />

                    </com.google.android.material.chip.ChipGroup>

                </HorizontalScrollView>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textCategory"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:alpha="?attr/emphasisMediumAlpha"
                    android:ellipsize="end"
                    android:text="@{artworkDetailViewModel.uiState.category}"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textAppearance="?attr/textAppearanceLabelLarge"
                    android:textColor="?attr/colorSecondary"
                    app:layout_constraintEnd_toEndOf="@id/image"
                    app:layout_constraintStart_toStartOf="@id/image"
                    app:layout_constraintTop_toBottomOf="@id/horizontalScroll"
                    tools:maxLines="1"
                    tools:text="@tools:sample/lorem/random" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:alpha="?attr/emphasisHighAlpha"
                    android:text="@{artworkDetailViewModel.uiState.title}"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceHeadlineMedium"
                    app:layout_constraintEnd_toEndOf="@id/textCategory"
                    app:layout_constraintStart_toStartOf="@id/textCategory"
                    app:layout_constraintTop_toBottomOf="@id/textCategory"
                    tools:maxLines="3"
                    tools:text="@tools:sample/lorem/random" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textNameArtist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_1"
                    android:alpha="?attr/emphasisMediumAlpha"
                    android:text="@{artworkDetailViewModel.uiState.artistName}"
                    android:textAlignment="center"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintEnd_toEndOf="@id/textTitle"
                    app:layout_constraintStart_toStartOf="@id/textTitle"
                    app:layout_constraintTop_toBottomOf="@id/textTitle"
                    tools:text="Rembrandt" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textNameArtist" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_2"
                    android:alpha="?attr/emphasisMediumAlpha"
                    app:uiText="@{artworkDetailViewModel.uiState.descriptionUiText}"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    app:layout_constraintEnd_toEndOf="@id/textNameArtist"
                    app:layout_constraintStart_toStartOf="@id/textNameArtist"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    tools:maxLines="3"
                    tools:text="@tools:sample/lorem/random" />

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textDescription" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/labelRecommended"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/grid_2"
                    android:alpha="?attr/emphasisHighAlpha"
                    android:text="@string/recommended"
                    android:textAppearance="?attr/textAppearanceTitleMedium"
                    app:layout_constraintEnd_toEndOf="@id/textDescription"
                    app:layout_constraintStart_toStartOf="@id/textDescription"
                    app:layout_constraintTop_toBottomOf="@id/divider2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/listRecommended"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="horizontal"
                    android:paddingHorizontal="@dimen/grid_1"
                    android:paddingVertical="@dimen/grid_1"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/labelRecommended"
                    app:spanCount="1"
                    tools:listitem="@layout/list_item_recommended" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.core.widget.NestedScrollView>


</layout>
